[gd_scene load_steps=5 format=3 uid="uid://dnc0aw0gl43a4"]

[ext_resource type="Script" path="res://src/templates/puzzles/pillar.gd" id="1_mbvpu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n0oo6"]
size = Vector2(80, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8ytv"]
size = Vector2(10, 140)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gryhx"]
size = Vector2(10, 140)

[node name="Pillar" type="RigidBody2D" groups=["pushable_object"]]
collision_layer = 96
collision_mask = 96
gravity_scale = 3.0
lock_rotation = true
script = ExtResource("1_mbvpu")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -40.0
offset_top = -80.0
offset_right = 40.0
offset_bottom = 80.0
color = Color(0.144063, 0.144063, 0.144062, 1)
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -40.0
offset_top = -80.0
offset_right = 40.0
offset_bottom = 80.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n0oo6")

[node name="LeftCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCheck"]
position = Vector2(-45, 0)
shape = SubResource("RectangleShape2D_t8ytv")

[node name="RightCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCheck"]
position = Vector2(45, 0)
shape = SubResource("RectangleShape2D_gryhx")

[connection signal="body_entered" from="LeftCheck" to="." method="_on_left_check_body_entered"]
[connection signal="body_exited" from="LeftCheck" to="." method="_on_left_check_body_exited"]
[connection signal="body_entered" from="RightCheck" to="." method="_on_right_check_body_entered"]
[connection signal="body_exited" from="RightCheck" to="." method="_on_right_check_body_exited"]
